# gpio

./: CMakeLists.txt
Chardev/: .Chardev.ko.cmd  .Chardev.mod.o.cmd  .Chardev.o.cmd  Chardev.c  Chardev.c~  Chardev.ko  Chardev.mod.c  Makefile  Makefile~  modules.order
Chardev/.tmp_versions/: Chardev.mod
include/: hello_char.h  hello_char.h~
src/: .hello_char.ko.cmd  .hello_char.mod.o.cmd  .hello_char.o.cmd  Makefile  hello_app  hello_app.c~  hello_char.c  hello_char.ko  hello_char.mod.c  modules.order
src/.tmp_versions/: hello_char.mod
